# game_of_life

./: Cargo.toml  index.html  styles.css
