[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom={version="0.2.7",features=["js"]}
log="0.4.17"
rand="0.8.5"
wasm-logger="0.2.0"
yew="0.19.3"
gloo-timers="0.2.4"
